move vector db logic to ad-hoc class and first experiments with qdrant

--- a/nb_experiments.ipynb
+++ b/nb_experiments.ipynb
@@ -2,10 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b0accd0d-fb0b-4c5e-be02-8063d3b6a2c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mariadancianu/Desktop/Git Projects/RAG-Optimization/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import json\n",
     "import os \n",
@@ -180,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "957f241f-d54c-452e-94ad-cfcc8a81a836",
    "metadata": {},
    "outputs": [],
@@ -212,10 +231,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "de25a07e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(\"CustomRAG config: {'chunk_size': 400, 'chunk_overlap': 15, \"\n",
+      " \"'vector_database': 'chromadb', 'embeddings_function': {'model_name': \"\n",
+      " \"'text-embedding-3-large', 'platform': 'OpenAI'}, 'llm': {'model_name': \"\n",
+      " \"'gpt-3.5-turbo', 'client': 'OpenAI'}}\")\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'CustomRAG' object has no attribute 'vector_db_folder'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 19\u001b[39m\n\u001b[32m      3\u001b[39m parameters_dict = {\n\u001b[32m      4\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mchunk_size\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m400\u001b[39m,\n\u001b[32m      5\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mchunk_overlap\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m15\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m     14\u001b[39m         }\n\u001b[32m     15\u001b[39m }\n\u001b[32m     17\u001b[39m df_to_test = df[\u001b[32m0\u001b[39m:\u001b[32m10\u001b[39m]\n\u001b[32m---> \u001b[39m\u001b[32m19\u001b[39m rag = \u001b[43mCustomRAG\u001b[49m\u001b[43m(\u001b[49m\u001b[43mknowledge_base\u001b[49m\u001b[43m=\u001b[49m\u001b[43mlangchain_docs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m     20\u001b[39m \u001b[43m                \u001b[49m\u001b[43mprompt_message\u001b[49m\u001b[43m=\u001b[49m\u001b[43mprompt_message\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     21\u001b[39m \u001b[43m                \u001b[49m\u001b[43mconfig_dict\u001b[49m\u001b[43m=\u001b[49m\u001b[43mparameters_dict\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m     22\u001b[39m \u001b[43m                \u001b[49m\u001b[43mresults_folder\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m./eval_results/test_new_class\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m     23\u001b[39m \u001b[43m                \u001b[49m\u001b[43mvector_db_folder\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m./vector_databases/test_new_class\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Git Projects/RAG-Optimization/rag_optimization.py:409\u001b[39m, in \u001b[36mCustomRAG.__init__\u001b[39m\u001b[34m(self, knowledge_base, prompt_message, config_dict, results_folder, vector_db_folder, save_results)\u001b[39m\n\u001b[32m    406\u001b[39m pprint.pprint(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mCustomRAG config: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconfig_dict\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    408\u001b[39m \u001b[38;5;28mself\u001b[39m.set_config_options(config_dict)\n\u001b[32m--> \u001b[39m\u001b[32m409\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcreate_required_folders\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    410\u001b[39m \u001b[38;5;28mself\u001b[39m.initialize_llm_client()\n\u001b[32m    412\u001b[39m vector_store = VectorStore(\n\u001b[32m    413\u001b[39m     knowledge_base=knowledge_base,\n\u001b[32m    414\u001b[39m     config_dict=config_dict,\n\u001b[32m    415\u001b[39m )\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Git Projects/RAG-Optimization/rag_optimization.py:440\u001b[39m, in \u001b[36mCustomRAG.create_required_folders\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    438\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os.path.exists(\u001b[38;5;28mself\u001b[39m.results_folder):\n\u001b[32m    439\u001b[39m     os.mkdir(\u001b[38;5;28mself\u001b[39m.results_folder)\n\u001b[32m--> \u001b[39m\u001b[32m440\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os.path.exists(\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mvector_db_folder\u001b[49m):\n\u001b[32m    441\u001b[39m     os.mkdir(\u001b[38;5;28mself\u001b[39m.vector_db_folder)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'CustomRAG' object has no attribute 'vector_db_folder'"
+     ]
+    }
+   ],
    "source": [
     "from rag_optimization import CustomRAG, prompt_message, convert_knowledge_base_to_langchain_docs\n",
     "\n",
@@ -237,9 +280,9 @@
     "\n",
     "rag = CustomRAG(knowledge_base=langchain_docs, \n",
     "                prompt_message=prompt_message,\n",
-    "                config=parameters_dict, \n",
-    "                results_folder='/eval_results/test_new_class', \n",
-    "                vector_db_folder='/vector_databases/test_new_class')"
+    "                config_dict=parameters_dict, \n",
+    "                results_folder='./eval_results/test_new_class', \n",
+    "                vector_db_folder='./vector_databases/test_new_class')"
    ]
   },
   {
@@ -687,54 +730,286 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d24709c9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "4e7fe36d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94fae689",
+   "cell_type": "markdown",
+   "id": "55f29cb2",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from sentence_transformers import SentenceTransformer\n",
-    "\n",
-    "# Load a pre-trained Sentence-BERT model\n",
-    "model = SentenceTransformer('all-MiniLM-L6-v2')\n",
-    "\n",
-    "# Example sentences\n",
-    "sentences = [\n",
-    "    \"Machine learning is fascinating.\",\n",
-    "    \"I love exploring data science techniques.\",\n",
-    "    \"Sentence embeddings are useful for NLP tasks.\"\n",
-    "]\n",
-    "\n",
-    "# Generate embeddings for each sentence\n",
-    "embeddings = model.encode(sentences)"
+    "# Trye Qdrant vector database"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd608dec",
+   "id": "58eb6606",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Print embeddings for each sentence\n",
-    "for i, sentence in enumerate(sentences):\n",
-    "    print(f\"Sentence: {sentence}\")\n",
-    "    print(f\"Embedding: {embeddings[i][:5]}...\")  # Showing only the first 5 values for brevity\n",
-    "    print()"
+    "# supports hybrid search: combine sparse (ie TF-IDF, BM25) and dense vectors \n",
+    "# supports reranking and more advanced search strategies for RAG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "67ee61d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_qdrant import FastEmbedSparse, RetrievalMode\n",
+    "from langchain_qdrant import QdrantVectorStore\n",
+    "from langchain_openai import OpenAIEmbeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e02d3c6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"dataset.csv\")\n",
+    "\n",
+    "langchain_docs = convert_knowledge_base_to_langchain_docs(df)\n",
+    "\n",
+    "embeddings = OpenAIEmbeddings()\n",
+    "sparse_embeddings = FastEmbedSparse(model_name=\"Qdrant/BM25\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bc52219",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58611d76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note that if you’ve added documents with HYBRID mode, you can switch to any retrieval mode when searching. Since both the dense and sparse vectors are available in the collection.\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "vector_store = QdrantVectorStore.from_documents(\n",
+    "    langchain_docs,\n",
+    "    embedding=embeddings,\n",
+    "    sparse_embedding=sparse_embeddings,\n",
+    "    #location=\":memory:\",  # Local mode with in-memory storage only\n",
+    "    path=\"./vector_databases_qdrant/\",  # Local mode, without using the Qdrant server, may also store your vectors on disk so they’re persisted between runs.\n",
+    "    collection_name=\"my_documents\",\n",
+    "    retrieval_mode=RetrievalMode.HYBRID, # RetrievalMode.DENSE, RetrievalMode.SPARSE\n",
+    ")\"\"\"\n",
+    "\n",
+    "\n",
+    "vector_store = QdrantVectorStore.from_existing_collection(\n",
+    "    embedding=embeddings,\n",
+    "    sparse_embedding=sparse_embeddings,\n",
+    "    collection_name=\"my_documents\",\n",
+    "    path=\"./vector_databases_qdrant/\",\n",
+    "    retrieval_mode=RetrievalMode.HYBRID\n",
+    ")\n",
+    "\n",
+    "\n",
+    "#You can also transform the vector store into a retriever for easier usage in your chains.\n",
+    "#retriever = vector_store.as_retriever(search_type=\"mmr\", search_kwargs={\"k\": 1})\n",
+    "#retriever.invoke(query)\n",
+    "\n",
+    "query = \"Who were the normans?\"\n",
+    "found_docs = vector_store.similarity_search_with_score(query, k=3)\n",
+    "\n",
+    "\n",
+    "for doc, score in found_docs:\n",
+    "    print(f\"* [SIM={score:3f}] {doc.page_content} [{doc.metadata}]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "874d1682",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# metadata filtering\n",
+    "from qdrant_client import models\n",
+    "\n",
+    "results = vector_store.similarity_search(\n",
+    "    query=query,\n",
+    "    k=1,\n",
+    "    filter=models.Filter(\n",
+    "        should=[\n",
+    "            models.FieldCondition(\n",
+    "                key=\"page_content\",\n",
+    "                match=models.MatchValue(\n",
+    "                    value=\"The top 10 soccer players in the world right now.\"\n",
+    "                ),\n",
+    "            ),\n",
+    "        ]\n",
+    "    ),\n",
+    ")\n",
+    "for doc in results:\n",
+    "    print(f\"* {doc.page_content} [{doc.metadata}]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fd5689ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qdrant_client import QdrantClient\n",
+    "from qdrant_client import models\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c206e1c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3d003d9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1204\n"
+     ]
+    }
+   ],
+   "source": [
+    "docs = []\n",
+    "metadata = []\n",
+    "print(len(langchain_docs))\n",
+    "\n",
+    "for doc in langchain_docs:\n",
+    "    docs.append(doc.page_content)\n",
+    "    metadata.append(doc.metadata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0477ac26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "collections=[]\n",
+      "here\n",
+      "collections=[]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching 5 files: 100%|██████████| 5/5 [00:08<00:00,  1.61s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "client = QdrantClient(url=\"http://localhost:6333\")\n",
+    "\n",
+    "collections = client.get_collections()\n",
+    "\n",
+    "print(collections)\n",
+    "\n",
+    "collection_name = \"my_documents\"\n",
+    "\n",
+    "client.delete_collection(collection_name=collection_name)\n",
+    "collections = client.get_collections()\n",
+    "\n",
+    "print(\"here\")\n",
+    "print(collections)\n",
+    "\n",
+    "#client.set_model(\"sentence-transformers/all-MiniLM-L6-v2\")\n",
+    "client.set_model(\"snowflake/snowflake-arctic-embed-s\")\n",
+    "#client.set_model(\"openai/OpenAI text-embedding-3-small\") # OpenAI Embeddings are supported but with a different workflow\n",
+    "\n",
+    "# comment this line to use dense vectors only\n",
+    "client.set_sparse_model(\"prithivida/Splade_PP_en_v1\")#\"Qdrant/BM25\") #\"prithivida/Splade_PP_en_v1\")\n",
+    "\n",
+    "\n",
+    "# Methods get_fastembed_vector_params and get_fastembed_sparse_vector_params help you to get the corresponding parameters for the models you are using. These parameters include vector size, distance function, etc.\n",
+    "\n",
+    "# Without fastembed integration, you would need to specify the vector size and distance function manually. \n",
+    "if not client.collection_exists(collection_name):\n",
+    "    client.create_collection(\n",
+    "        collection_name=collection_name,\n",
+    "        vectors_config=client.get_fastembed_vector_params(),\n",
+    "        # comment this line to use dense vectors only\n",
+    "        sparse_vectors_config=client.get_fastembed_sparse_vector_params(),  \n",
+    "    )\n",
+    "    client.add(\n",
+    "        collection_name=collection_name,\n",
+    "        documents=docs,\n",
+    "        metadata=metadata,\n",
+    "        parallel=0,  # Use all available CPU cores to encode data. \n",
+    "    )\n",
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "if not client.collection_exists(collection_name):\n",
+    "    \n",
+    "    client.create_collection(\n",
+    "        collection_name=collection_name,\n",
+    "        # TODO: review vectors_config and sparse_vectors_config\n",
+    "        vectors_config={\n",
+    "        \"text-dense\": models.VectorParams(\n",
+    "            size=1536,  # OpenAI Embeddings\n",
+    "            distance=models.Distance.COSINE,\n",
+    "            )\n",
+    "        },\n",
+    "        sparse_vectors_config={\n",
+    "        \"text-sparse\": models.SparseVectorParams(\n",
+    "            index=models.SparseIndexParams(\n",
+    "                on_disk=False,\n",
+    "            )\n",
+    "        )\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "    vector_store = QdrantVectorStore.from_documents(\n",
+    "        langchain_docs,\n",
+    "        embedding=embeddings,\n",
+    "        client=client,\n",
+    "        sparse_embedding=sparse_embeddings,\n",
+    "        collection_name=collection_name,\n",
+    "        retrieval_mode=RetrievalMode.HYBRID, # RetrievalMode.DENSE, RetrievalMode.SPARSE\n",
+    "    )\n",
+    "else:\n",
+    "    \n",
+    "    vector_store = QdrantVectorStore.from_existing_collection(\n",
+    "        embedding=embeddings,\n",
+    "        sparse_embedding=sparse_embeddings,\n",
+    "        client=client,\n",
+    "        collection_name=collection_name,\n",
+    "      #  path=\"./vector_databases_qdrant/\",\n",
+    "        retrieval_mode=RetrievalMode.HYBRID\n",
+    "    )\"\"\"\n"
    ]
   }
  ],
